--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,10 @@
+*{
+  border: 1px solid black;
+}
+/* powyzsze do debugowania, rysuje granice wszystkich elementow na stronie */
 .App {
   text-align: center;
 }
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +38,53 @@
   to {
     transform: rotate(360deg);
   }
+}
+nav {
+  text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  background: #D3C4AE;
+  padding: 15px;
+}
+nav a{
+  margin: 10px;
+  box-shadow: 1px 1px 1px black;
+  padding: 10px;
+  border: 1px solid black;
+}
+a img{
+  max-width:100%;
+  max-height: 100%;
+}
+.active{
+  box-shadow: 1px 1px 1px inset black;
+  background: #BCAC94;
+  opacity: 1;
+}
+#logolink, #koszyklink{
+  display: flex;
+  justify-content: center;
+}
+#logo{
+  width: 15%;
+  height: 15%;
+}
+#koszyk{
+  width: 5%;
+  height: 5%;
+}
+.socialmedia{
+  height: 100px;
+  width: 100px;
+  margin: 10px;
+  border: 5px solid black;
+  border-radius: 50%;
+  display: inline-block;
+}
+.smlogo{
+  height: 100%;
+  width: 100%;
+}
+.pending{
+  opacity: 0;
 }
